--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15075,7 +15075,13 @@ li + .nav__separate {
         margin-bottom: -40px;
         margin-right: -10px;
     }
+    .footer .grid.m-90 {
+        margin-right: 90px;
+    }
 
+    .footer .col--6-12.mrs-40 {
+        margin-left: -25px;
+    }
     .footer .col--3-12 {
 
         width: 100%;
