callback icon on products added

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18695,6 +18695,14 @@ strong {
     border-top: none;
 }
 
+.popup-callsinit {
+    position: fixed;
+    top: 125px;
+    right: 15px;
+    cursor: pointer;
+    width: 27px;
+    height: 35px;
+}
 
 
 
