--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15591,6 +15591,26 @@ li + .nav__separate {
     font-size: 28px;
     line-height: 1.2;
 }
+@media (max-width: 451px){
+    .hero__maintext{
+        font-size: 20px;
+        line-height: 1.3;
+        //font-weight: 550;
+    }
+}
+@media (max-width: 334px){
+    .hero__maintext{
+        font-size: 18px;
+        //font-weight: 500;
+    }
+}
+
+@media (max-width: 293px) {
+    .hero__title{
+        font-size: 24px
+    }
+}
+
 
 .hero__tabs {
     position: absolute;
@@ -18703,6 +18723,8 @@ strong {
     width: 27px;
     height: 35px;
 }
+
+
 
 
 
