--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16435,6 +16435,13 @@ input:checked ~ .gifts__title {
 
 .tiles__title {
     margin-bottom: .2em;
+    color: white;
+    text-shadow: 1px -2px 6px black;
+}
+.img_text_bottom {
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
 }
 
 .tiles--promo {
