--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18734,7 +18734,16 @@ strong {
 }
 
 
-
+.overLoader{
+    position: fixed;
+    opacity: 1;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+}
 
 
 
