--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18737,8 +18737,8 @@ strong {
 .overLoader{
     position: fixed;
     opacity: 1;
-    z-index: 1;
-    top: 0;
+    z-index: 100;
+    top: 30%;
     left: 0;
     bottom: 0;
     right: 0;
